Executable renamed to "MotionExtraction"

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,7 @@ LFLAGS = -L/usr/local/Cellar/ffmpeg/6.0_2/lib
 LIBS =  -lavformat -lavcodec
 
 main: main.o
-	$(CC) $(CFLAGS) -o main main.o $(LFLAGS) $(LIBS)
+	$(CC) $(CFLAGS) -o MotionExtraction main.o $(LFLAGS) $(LIBS)
 
 main.o: main.c
 	$(CC) $(CFLAGS) -c main.c
@@ -16,4 +16,4 @@ main.o: main.c
 # 	$(CC) $(CFLAGS) -c test.c
 
 clean:
-	$(RM) main *.o *~
+	$(RM) MotionExtraction *.o *~
