--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,6 @@
 *.i*86
 *.x86_64
 *.hex
-main
 
 # Debug files
 *.dSYM/
@@ -53,6 +52,7 @@ Mkfile.old
 dkms.conf
 
 .DS_store
+MotionExtraction
 *.mov
 *.mp4
 .vscode
